# willow

./: .dockerignore  .env  .eslintrc.json  .gitignore  Dockerfile  app.js  eventsinfo.json  index.html  moxie_build.sh  package-lock.json  package.json  requirements.txt  run_container.sh  test.html  tsconfig.json  userinfo.json
.github/: BRANCHES.md
.github/workflows/: main_willowapp.yml  test-build-src.yml
Python/: test.txt
Python/src/: main.py  util.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  config.js  index.js  style.css  theme.js  utils.js
exp-billing/: app.js  package-lock.json  package.json
exp-billing/models/: client-schema.js  event-schema.js  user-model.js  user-schema.js
exp-billing/routes/: index.js  user.js  users.js
exp-billing/static/: index.html  secret.html
exp-billing/views/: dashboard.pug  index.pug  layout.pug
models/: client-schema.js  event-schema.js  user-model.js
moxie/: Cargo.toml  README.md
moxie/benches/: full_header.rs  full_make_gen.rs
moxie/src/: gen.rs  lib.rs  model.rs  moxie.rs  template.rs
old/: package-lock.json  package.json
old/src/: test.json
old/style/: style.css
public/javascripts/: materialize.min.js  script.js
public/stylesheets/: style.css
routes/: _old-users.js  api.js  client.js  index.js  login.js  user.js
routes/handlers/: apiHandlers.js  clientHandlers.js  mailerConfig.js  moxie  updateEvent.js  userHandlers.js
routes/helpers/: helpers.js
routes/validators/: clientValidators.js  userValidators.js
src/: app.js  app.ts  index.js  package-lock.json  script.js  user.js
src/handlers/: apiHandlers.ts  clientHandlers.ts  eventHandlers.ts  mailerConfig.ts  moxie  reqTypes.ts  userHandlers.ts
src/middleware/: auth.ts  https.ts
src/routes/: api.js  (+7 more)
templates/: Brandon-Belt.html  statement.css  styles.css  template.html
test/: routes.test.js  routes.test.ts  testData.ts  utils.test.ts
utils/: databaseHelpers.js  helpers.js  userHelpers.js
views/: clientpage.pug  contactInfo.pug  dashboard.pug  eventpage.pug  index.pug  layout.pug  login.pug  preferences.pug  register.pug
violetj2p/: Cargo.toml
violetj2p/benches/: full_header.rs  full_make_gen.rs
violetj2p/etc/: client.json  events.json
violetj2p/src/: engine.rs  gen.rs  lib.rs  model.rs  violetj2p.rs
violetj2p/violetj2p-core/: Cargo.toml
violetj2p/violetj2p-core/benches/: full_header.rs  full_make_gen.rs
violetj2p/violetj2p-core/src/: engine.rs  gen.rs  lib.rs  model.rs  violetj2p.rs
violetj2p/violetj2p-macro/: Cargo.toml
violetj2p/violetj2p-macro-util/: Cargo.toml
violetj2p/violetj2p-macro-util/src/: lib.rs
violetj2p/violetj2p-macro/src/: lib.rs
willow-violet/: Cargo.toml
willow-violet/.cargo/: config
willow-violet/src/: gen.rs  harness.rs  lib.rs  model.rs
(+55 files in other folders)
