[package]
name = "willow-core-moxie"
version = "0.1.0"
authors = ["ethgallucci <staticanne@skiff.com>"]
edition = "2021"

[[bin]]
name = "moxie"
path = "src/moxie.rs"

[lib]
name = "moxie"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.58"
log = "0.4.17"
matches = "0.1.9"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
wkhtmltopdf = "0.4.0"

[profile.dev]
opt-level = 0
lto = false
panic = "unwind"
incremental = true
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
panic = "abort"
incremental = false
