[package]
name = "willow-core-moxie"
version = "0.1.5"
authors = ["ethgallucci <staticanne@skiff.com>"]
edition = "2021"

[[bin]]
name = "moxie"
path = "src/moxie.rs"

[lib]
name = "moxie_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.58"
log = "0.4.17"
matches = "0.1.9"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["console"] }
wkhtmltopdf = "0.4.0"

[profile.dev]
opt-level = 0
lto = false
incremental = true
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
incremental = false
